@@ -1,5 +1,13 @@
 2010-02-03  Nate Chapin  <japhet@chromium.org>
 
+        Unreviewed, Chromium mac build fix.
+
+        [V8] Remove unused V8Proxy* variable from generated wrapping code.
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+
+2010-02-03  Nate Chapin  <japhet@chromium.org>
+
         Reviewed by Dimitri Glazkov.
 
         [V8] Use toV8() to wrap in the custom bindings, and remove
